# AI-career-guidance

./: README.md  app3.py  app4.py  cvtoresume.py  pyproject.toml  requirements.txt
career_guidance/: Cover_letter_gen.py  JD_skills_matcher.py  Resume_parse.py  app2.py  audio_interview.py  chatasst.py  tele_interview.py
